Created user login and registration features
- Gemfile: hirb gem for development
- app.rb: register, login, and logout paths (GET/POST)
- views/layout.haml: @current_user information
- views/ : created login and register views
- model/user.rb:
	- fixed argument order in hash_password
	- prefer attr_accessible over attr_protected

--- a/views/layout.haml
+++ b/views/layout.haml
@@ -4,4 +4,13 @@
     %title Security Calculator
   %body
     %h1 Welcome to Security Calculator
+    - if @current_user
+      = "welcome #{@current_user.username} | "
+      %a{href: '/logout'}
+        logout
+    - else
+      %a{href: '/login'}
+        = "login | "
+      %a{href: '/register'}
+        = "register"
     = yield
