Added Flash messages
- Gemfile: Added rack-flash3 gem; bundle install
- app.rb: configure Rack:Flash and use it for errors, notices
- public/custom.css: flash error and notice styles
- views/flash_bar.haml: define flash view component
- views/layout.haml: add flash component to views

--- a/views/layout.haml
+++ b/views/layout.haml
@@ -2,6 +2,7 @@
 %html
   %head
     %title Security Calculator
+    %link{rel:'stylesheet', href:'/custom.css'}
   %body
     %h1 Welcome to Security Calculator
     - if @current_user
@@ -13,4 +14,5 @@
         = "login | "
       %a{href: '/register'}
         = "register"
+    = haml :flash_bar
     = yield
