Outsource the secure calculator operations to an API
- app.rb: use HTTParty to post to random_simple route of API
- Gemfile: add httparty gem; bundle install
- helpers/securecalc_helper.rb: remove vestigial random_simple method
- views/random_simple.haml: use strings instead of symbols in results hash

--- a/views/random_simple.haml
+++ b/views/random_simple.haml
@@ -1,9 +1,9 @@
 %h2 Random number
 - if @random_results
   %p
-    = "Your random number: #{@random_results[:random]}"
+    = "Your random number: #{@random_results['random']}"
   %p
-    = "(note: #{@random_results[:notes]})" if @random_results[:notes]
+    = "(note: #{@random_results['notes']})" if @random_results['notes']
 %form{:action => '/random_simple', :method => 'post', :id => 'user-form'}
   %label{:for => 'max_input'} Max
   %input{:type => 'text', :name => 'max', :id => 'max_input', :placeholder => '(enter max number)'}
