User can see their profile (including API auth token)
- helpers/securecalc_helper.rb:
	- create #user_jwt method to get api authorization jwt
- views/layout.haml: add link to profile page for logged in users
- views/profile.haml: show basic user profile
- app.rb: create /user/:username route for profile

--- a/views/layout.haml
+++ b/views/layout.haml
@@ -10,6 +10,9 @@
     = " | "
     - if @current_user
       = "welcome #{@current_user.username} | "
+      %a{href: "/user/#{@current_user.username}"}
+        profile
+      = " | "
       %a{href: '/logout'}
         logout
     - else
