--- a/views/login.haml
+++ b/views/login.haml
@@ -5,3 +5,6 @@
   %label{:for => 'password'} Password
   %input{:type => 'password', :name => 'password', :id => 'password_input'}
   %input{:type => 'submit', :id => 'login-form-submit', :class => 'submit', :value => 'submit'}
+%p or
+%a{href: "https://github.com/login/oauth/authorize?client_id=#{ENV['GH_CLIENT_ID']}&scope=user:email"}
+  Login with Github
