Add dalli and support for cache objects
- Gemfile: add dalli and activesupport gems; bundle install
- app.rb:
	- add configuration setting for an op_cache cache
	- check cache for index on GET '/'

--- a/views/index.haml
+++ b/views/index.haml
@@ -5,3 +5,9 @@
     %li
       %a{href: '/random_simple'}
         Random Simple
+  - if (@op_index)
+    %h3 Recent Operations:
+    %ul
+      -@op_index['operations'].each do |op|
+        %li
+          ="#{op['name']} : #{op['date']}"
